--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,14 @@
     --border2: #5d4e4b;
     --bg: #231f1f;
     --bg2: #151311;
+
+	--red: #ea6962;
+    --orange: #e78a4e;
+    --yellow: #d8a657;
+    --green: #a9b665;
+    --aqua: #7daea3;
+    --purple: #d3869b;
+
 }
 
 h1, h2, h3 {
@@ -28,6 +36,10 @@ img {
     opacity: 1;
     transition: opacity 300ms ease-out;
     user-select: none;
+}
+
+button {
+	cursor: pointer;
 }
 
 
