--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,6 @@
     --green: #a9b665;
     --aqua: #7daea3;
     --purple: #d3869b;
-
 }
 
 h1, h2, h3 {
@@ -26,8 +25,7 @@ h1, h2, h3 {
 
 body {
 	background: var(--bg);
-	padding: 5rem;
-
+	font-family: Catriel, sans-serif;
 	color: var(--primary);
 }
 
@@ -42,7 +40,9 @@ button {
 	cursor: pointer;
 }
 
-
+p, span {
+	transition: color 300ms ease-out;
+}
 
 .visually-hidden {
 	border: 0;
